--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.header
+{
+  background-color: grey;
+  height: 60px;
+  width: 100%;
 }
+.title
+{
+  color:white;
+  margin-left:40%;
+  margin-top: 60px;
+  font-weight: bold;
+  text-align: center;
+  font-size: 20px;
+}
+.genre
+{
+  color:grey;
+  margin:30px;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+.delete
+{
+  color:white;
+  font-size:20px;
+  margin-left: 30%;
+  border: none;
+  background-color: grey;
+}
+.close
+{
+  margin-left: 5%;
+  color:white;
+  font-size:20px;
+  border: none;
+  background-color: grey;
+}
+.details
+{
+  margin-left: 80px;
+  padding: 10px;
+  background-color: grey;
+  color: white;
 }
